# To be released:

# 1.15.4 - Fri 11 Sep 2020

- Fix Socket Disconnection
- Remove useless message's properties (isStartDay, isYesterday, isToday, date, time and commandInfo)
- Forbid setting new user when previous one wasn't disconnected

# 1.15.3 - Tue 7 Sep 2020

- Add send action operation to ChannelController
- Fix serialized file names of SendActionRequest
- Fix `ConnectedEvent` parse process

# 1.15.2 - Tue 1 Sep 2020

- `ChannelResponse.watchers` is an array of User now
- `Watcher` model has been removed, `User` model should be used instead
- `QueryChannelsRequet` has a new field called `memberLimit` to limit the number of members received per channel

# 1.15.1 - Thu 28 Aug 2020

- New MapAdapter that omit key that contains null values or emptyMaps
- Null-Check over Watchers response

# 1.15.0 - Thu 20 Aug 2020

- Refactor ChatEvents Structure

# 1.14.0 - Thu 20 Aug 2020

- Decouple cloud messages handler logic from configuration data
- Fix createChannel methods

# 1.13.3 - Tue 18 Aug 2020

- Set message as optional when updating a channel

# 1.13.2 - Fri 14 Aug 2020

- Reduce TLS Latency

# 1.13.1 - Fri 7 Aug 2020

- Fix DateParser

# 1.13.0 - Tue 28 Jul 2020

- Add `Client.flagUser()` method to flag an User
- Add `Client.flagMessage()` method to flag a Message
- Deprecated method `Client.flag()` because was a bit confusing, you should use `client.flagUser()` instead

# 1.12.3 - Mon 27 Jul 2020

- Fix NPE on TokenManagerImpl
- Upgrade Kotlin to version 1.3.72
- Add Kotlin Proguard Rules

# 1.12.2 - Fri 17 Jul 2020

- Add customer proguard rules

# 1.12.1 - Wed 15 Jul 2020

- Add customer proguard rules

# 1.12.0 - Mon 06 Jul 2020

- Add mute and unmute methods to channel controller

# 1.11.0 - Mon 06 Jul 2020

- Fix message mentioned users

# 1.10.0 - Wed 29 June 2020

- Add mute and unmute channels
- Add `notification.channel_mutes_updated` socket even handling
- Add user.channelMutes field
- Improve error logging